Fix up spacing between elements after #88

--- a/datadir/resources/hoogle.css
+++ b/datadir/resources/hoogle.css
@@ -168,6 +168,8 @@ form {
 h1 {
     padding: 5px;
     margin-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
     font-weight: normal;
     padding-left: 170px;
     font-size: 16px;
@@ -214,6 +216,7 @@ p {
 .result {
     margin-left: 170px;
     margin-right: 20px;
+    margin-top: 1.5em;
 }
 
 .result.active {
@@ -240,14 +243,6 @@ a.dull, a.dull:hover {
     border-top: 1px solid #CCCCCC;
     font-size: 16px;
     padding: 0.2em 0.5em;
-}
-
-.from + .ans {
-    margin-top: 1.5em;
-}
-
-.doc + .ans {
-    margin-top: 1.5em;
 }
 
 .ans .a {
